Build with Eclipse 2026-06.